fix startup crash (#41608)
Commit Message: fix startup crash
Additional Description: 

Fix [#startup](https://github.com/envoyproxy/envoy/issues/41595) that
introduced at https://github.com/envoyproxy/envoy/pull/41079

We should never refer the Http::Headers::get() at global variable
because the construct will be called before main() and the
initialization of the `Http::PrefixValue`.

If we want to make a header with custom prefix to be inlined headers, we
can only do it in the header_map.h with a macro. But it's not suggested
anyway. We have too much inline headers now. I think we should gradually
make some uncommonly used headers as normal headers.

Risk Level: low.
Testing: n/a.
Docs Changes: n/a.
Release Notes: added.
Platform Specific Features: n/a.

---------

Signed-off-by: wbpcode <wbphub@gmail.com>
Signed-off-by: WangBaiping <wbphub@gmail.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -28,6 +28,11 @@ bug_fixes:
   change: |
     Fix a bug where Lua filters may result in Envoy crashes when setting response body to a
     larger payload (greater than the body buffer limit).
+- area: bootstrap
+  change: |
+    Fixed an issue where the custom
+    :ref:`header_prefix <envoy_v3_api_field_config.bootstrap.v3.Bootstrap.header_prefix>`
+    will result in crash at startup.
 - area: connection pool
   change: |
     Fix a crash in the TCP connection pool that occurs during downstream connection teardown when large requests
