--- a/docs/root/configuration/http/http_filters/_include/transform_filter.yaml
+++ b/docs/root/configuration/http/http_filters/_include/transform_filter.yaml
@@ -16,7 +16,8 @@ static_resources:
             name: local_route
             virtual_hosts:
             - name: local_service
-              domains: [ "*" ]
+              domains:
+              - "*"
               routes:
               - match:
                   prefix: "/route/override"
