xds: deprecate flag report_load_with_rq_issued and remove legacy code paths (#41614)
## Description

This PR removes the deprecated reloadable flag
`report_load_with_rq_issued` and cleans up the legacy paths.

Fix https://github.com/envoyproxy/envoy/issues/41509

---

**Commit Message:** router: deprecate flag report_load_with_rq_issued
and remove legacy code paths
**Additional Description:** Remove the deprecated reloadable flag
`report_load_with_rq_issued` and cleans up the legacy paths.
**Risk Level:** Low
**Testing:** CI
**Docs Changes:** N/A
**Release Notes:** Added

Signed-off-by: Rohit Agrawal <rohit.agrawal@databricks.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -60,6 +60,9 @@ removed_config_or_runtime:
 - area: http
   change: |
     Removed runtime guard ``envoy.reloadable_features.original_src_fix_port_exhaustion`` and legacy code paths.
+- area: xds
+  change: |
+    Removed runtime guard ``envoy.reloadable_features.report_load_with_rq_issued`` and legacy code paths.
 
 new_features:
 - area: http
