--- a/docs/root/configuration/http/http_filters/_include/transform_filter.yaml
+++ b/docs/root/configuration/http/http_filters/_include/transform_filter.yaml
@@ -27,7 +27,7 @@ static_resources:
                 typed_per_filter_config:
                   transform:
                     "@type": type.googleapis.com/envoy.extensions.filters.http.transform.v3.TransformConfig
-                    request_transform:
+                    request_transformation:
                       headers_mutations:
                       - append:
                           header:
@@ -43,18 +43,19 @@ static_resources:
           - name: transform
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.transform.v3.TransformConfig
-              request_transform:
+              request_transformation:
                 headers_mutations:
                 - append:
                     header:
                       key: "model-header"
                       value: "%RQ_BODY(model)%"
                     append_action: OVERWRITE_IF_EXISTS_OR_ADD
-                body_format_string:
-                  json_format:
-                    model: "new-model"
-                patch_format_string: true
-              response_transform:
+                body_transformation:
+                  body_format:
+                    json_format:
+                      model: "new-model"
+                  action: MERGE
+              response_transformation:
                 headers_mutations:
                 - append:
                     header:
