server: Add container-aware CPU detection using cgroup limits
This change adds CPU detection from cgroup limits to enable container-aware
concurrency configuration. When running in containers with CPU limits (e.g.,
Docker --cpus flag), Envoy can now detect and use those limits instead of
the host's CPU count.

Implementation:
- Added CgroupCpuUtil to read CPU limits from cgroup v1 and v2 filesystems
- Whitelisted /proc/self/mountinfo, /proc/self/cgroup, and /sys/fs/cgroup/*
  paths in filesystem security checks to allow reading cgroup files
- Added integration test requiring Docker with CPU limits
- Created bazel-test-cgroup.sh wrapper to run tests with Docker --cpus=2
- Added GitHub Actions workflow for automated testing

Testing:
- Integration test validates CPU limit detection in Docker containers
- Filesystem whitelist tests verify cgroup path access
- Tests run in privileged Docker containers with CPU limits set

Fixes envoyproxy/envoy#issue-number

Signed-off-by: premnath.nenavath <premnath.nenavath@gomotive.com>

--- a/test/server/BUILD
+++ b/test/server/BUILD
@@ -300,11 +300,14 @@ envoy_cc_test(
 envoy_cc_test(
     name = "cgroup_cpu_simple_integration_test",
     srcs = ["cgroup_cpu_simple_integration_test.cc"],
-    rbe_pool = "linux_x64_small",
-    tags = ["engflow_only"],
+    tags = [
+        "containerized",
+        # This test requires Docker with CPU limits (--cpus=2) to properly test cgroup detection.
+        # Run locally with: tools/bazel-test-cgroup.sh //test/server:cgroup_cpu_simple_integration_test
+        # Excluded from default test runs - requires privileged Docker container with --cpus flag.
+    ],
     deps = [
         "//source/server:cgroup_cpu_util_lib",
-        "//test/test_common:environment_lib",
     ],
 )
 
