mobile: propagate network changes via quic network observer registry  (#41548)
Commit Message: Implements EnvoyMobileQuicNetworkObserverRegistry and
EnvoyMobileQuicNetworkObserverRegistryFactory to propagate Android
network changes, like network connected, disconnected and default
network changed, to all the observers. And make cluster manager to pass
down the factory which will be used to create a registry for quic
connection pool to register EnvoyQuicClientSession for network changes
upon creation.

Additional Description: EnvoyQuicClientSession handling of network
changes is currently not implemented yet.

Risk Level: low
Testing: add new unit tests
Docs Changes: N/A
Release Notes: Y
Platform Specific Features: propagate Android network changes to quic.
Runtime guard:
envoy.reloadable_features.mobile_use_network_observer_registry
Fixes #36059

---------

Signed-off-by: Dan Zhang <danzh@google.com>
Co-authored-by: Dan Zhang <danzh@google.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -21,6 +21,10 @@ minor_behavior_changes:
     <envoy_v3_api_msg_service.ext_proc.v3.HeaderMutation>` fails. Removing
     request-specific details allows grouping by similar failure types. Detailed
     messages remain available in debug logs.
+- area: mobile
+  change: |
+    Use mobile specific network observer registries to propagate network change signals. This behavior can be reverted by
+    setting the runtime guard ``envoy.reloadable_features.mobile_use_network_observer_registry``.
 
 bug_fixes:
 # *Changes expected to improve the state of the world and are unlikely to have negative effects*
