admin: add tcmalloc stats endpoint (#41376)
This change adds endpoint to retrieve TCMalloc
stats. For details, see https://google.github.io/tcmalloc/stats.html.

TCMalloc provides detailed statistics that can be useful for
troubleshooting memory-related issues. For example, in several github
issues about overload manager, users have been advised to patch Envoy in
order to access these statistics to exclude possible heap fragmentation.

This pull request proposes adding a new admin interface endpoint
`/memory/tcmalloc` that exposes the raw TCMalloc statistics, as
generated by the TCMalloc implementation(s).

See attached examples.

[google-tcmalloc-dump.txt](https://github.com/user-attachments/files/22722240/google-tcmalloc-dump.txt)

[gperftools-tcmalloc-dump.txt](https://github.com/user-attachments/files/22722243/gperftools-tcmalloc-dump.txt)
These dumps do not contain any sensitive information.

Fixes #41375

Signed-off-by: Tero Saarni <tero.saarni@est.tech>
Signed-off-by: Tero Saarni <tero.saarni@gmail.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -95,5 +95,8 @@ new_features:
     This can avoid unnecessary load shedding or overload actions.
     To enable, set ``envoy.reloadable_features.fixed_heap_use_allocated`` to true.
     The default algorithm (heap_size - pageheap_unmapped - pageheap_free) does not discount for free memory in TCMalloc caches.
+- area: admin
+  change: |
+    Added ``/memory/tcmalloc`` admin endpoint that provides TCMalloc memory statistics.
 
 deprecated:
