--- a/.github/workflows/_run.yml
+++ b/.github/workflows/_run.yml
@@ -53,6 +53,9 @@ on:
       diskspace-hack-paths:
         type: string
         default:
+      docker-cpus:
+        type: number
+        default: 0
       docker-ipv6:
         default: true
         type: boolean
@@ -414,4 +417,4 @@ jobs:
         CI_SHA1: ${{ github.sha }}
         CI_TARGET_BRANCH: ${{ fromJSON(inputs.request).request.target-branch }}
         MOUNT_GPG_HOME: ${{ inputs.import-gpg && 1 || '' }}
-        ENVOY_DOCKER_OPTIONS: --network=host --security-opt seccomp=unconfined -v /dev/shm:/tmp/sandbox_base
+        ENVOY_DOCKER_CPUS: ${{ inputs.docker-cpus }}
