github/ci: Run diskspace hack in Envoy workflow
currently, it runs in the run action, which is after docker/bazel caches
are loaded

recently, github has reduced the diskspace in private repos and moving this
allows you to free diskspace before it runs out

Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/.github/workflows/_run.yml
+++ b/.github/workflows/_run.yml
@@ -245,6 +245,11 @@ jobs:
              "job-started": ${{ steps.started.outputs.value }}}
           | . * {$config, $check}
 
+    - name: Free diskspace
+      uses: envoyproxy/toolshed/gh-actions/diskspace@actions-v0.3.26
+      if: inputs.diskspace-hack
+      with:
+        to_remove: ${{ inputs.diskspace-hack-paths }}
 
     - run: |
         sudo mkdir -p /etc/docker
@@ -365,8 +370,6 @@ jobs:
         container-command: ${{ env.CONTAINER_COMMAND || inputs.container-command }}
         container-output: ${{ inputs.container-output }}
         context: ${{ steps.context.outputs.value }}
-        diskspace-hack: ${{ inputs.diskspace-hack }}
-        diskspace-hack-paths: ${{ inputs.diskspace-hack-paths }}
         downloads: ${{ inputs.downloads }}
         entrypoint: ${{ inputs.entrypoint }}
         error-match: ${{ inputs.error-match }}
