--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -37,6 +37,8 @@ removed_config_or_runtime:
 - area: http
   change: |
     Removed runtime guard ``envoy.reloadable_features.original_src_fix_port_exhaustion`` and legacy code paths.
+
+new_features:
 - area: lua
   change: |
     Added ``drainConnectionUponCompletion()`` to the Lua filter stream info API. This allows Lua scripts
@@ -58,6 +60,6 @@ removed_config_or_runtime:
     The default algorithm (heap_size - pageheap_unmapped - pageheap_free) does not discount for free memory in TCMalloc caches.
 - area: dns_filter
   change: |
-    Added ``access_logs`` for DNS filter.
+    Added :ref:`access_log <envoy_v3_api_field_extensions.filters.udp.dns_filter.v3.DnsFilterConfig.access_log>` for DNS filter.
 
 deprecated:
