refactor: align cgroup test with upstream runtime-cpu approach
- Changed test tag from 'containerized' to 'runtime-cpu' to match upstream
- Updated all test_tag_filters in .bazelrc to use -runtime-cpu
- Removed .github/workflows/cgroup-tests.yml (upstream uses main CI)
- Removed tools/bazel-test-cgroup.sh (upstream uses ci/do_ci.sh cpu-detection)
- Reverted tools/docker_wrapper.sh and tools/bazel-test-docker.sh to upstream
- Updated test comments to reflect Docker CPU limits execution
- Added 'no-remote' tag to prevent RBE execution
- Added quotes around 'cgroups' in comments for clarity

This aligns with maintainer's approach in PR envoyproxy/envoy#41646.

Signed-off-by: premnath.nenavath <premnath.nenavath@gomotive.com>

--- a/test/server/BUILD
+++ b/test/server/BUILD
@@ -301,10 +301,10 @@ envoy_cc_test(
     name = "cgroup_cpu_simple_integration_test",
     srcs = ["cgroup_cpu_simple_integration_test.cc"],
     tags = [
-        "containerized",
-        # This test requires Docker with CPU limits (--cpus=2) to properly test cgroup detection.
-        # Run locally with: tools/bazel-test-cgroup.sh //test/server:cgroup_cpu_simple_integration_test
-        # Excluded from default test runs - requires privileged Docker container with --cpus flag.
+        # This test requires Docker with CPU limits (--cpus=2) to properly test 'cgroup' detection.
+        # Run locally with `ENVOY_DOCKER_CPUS=2 ./ci/run_envoy_docker.sh ./ci/do_ci.sh cpu-detection
+        "runtime-cpu",
+        "no-remote",
     ],
     deps = [
         "//source/server:cgroup_cpu_util_lib",
