--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -2,6 +2,18 @@ date: Pending
 
 behavior_changes:
 # *Changes that are expected to cause an incompatibility if applicable; deployment changes are likely required*
+- area: server
+  change: |
+    Added container-aware CPU detection on Linux that respects cgroup CPU limits in addition to hardware thread count
+    and CPU affinity. This change only affects behavior when the ``--concurrency`` flag is not explicitly set.
+    Envoy now uses the minimum of hardware threads, CPU affinity, and cgroup CPU limits
+    to determine the number of worker threads by default. This provides better resource utilization in
+    containerized environments (Docker, Kubernetes) where CPU limits are set via cgroups. The new behavior
+    is enabled by default and can be disabled by setting the ``ENVOY_CGROUP_CPU_DETECTION`` environment
+    variable to ``false``. When disabled, Envoy will fall back to the previous behavior of using only
+    hardware thread count and CPU affinity for worker thread calculation. Uses conservative rounding (floor)
+    to account for non-worker threads and prevent container throttling. This can cause potential total connections
+    number drop.
 
 minor_behavior_changes:
 # *Changes that may cause incompatibilities for some users, but should not for most*
