--- a/.bazelrc
+++ b/.bazelrc
@@ -20,6 +20,7 @@ startup --host_jvm_args="-DBAZEL_TRACK_SOURCE_DIRECTORIES=1"
 #############################################################################
 
 common --noenable_bzlmod
+common --enable_workspace
 
 fetch --color=yes
 run --color=yes
