add substitution formatter for custom tag
Signed-off-by: WangBaiping <wbphub@gmail.com>

--- a/source/common/tracing/BUILD
+++ b/source/common/tracing/BUILD
@@ -126,6 +126,7 @@ envoy_cc_library(
         "custom_tag_impl.h",
     ],
     deps = [
+        "//source/common/formatter:substitution_formatter_lib",
         ":trace_context_lib",
         "//envoy/router:router_interface",
         "//envoy/tracing:custom_tag_interface",
