--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -100,7 +100,7 @@ new_features:
 - area: cel
   change: |
     Added per-expression configuration options for CEL evaluator to control string conversion, concatenation,
-    and string extension functions. CEL expressions in RBAC policies, access logger filters, and formatters
+    and string extension functions. CEL expressions in RBAC policies and access logger filters
     can now enable string functions such as ``replace()`` and ``split()`` through the new ``cel_config`` field
     in their respective configurations.
 - area: lua
