--- a/.github/workflows/_mobile_container_ci.yml
+++ b/.github/workflows/_mobile_container_ci.yml
@@ -13,6 +13,9 @@ on:
     inputs:
       args:
         type: string
+      bind-mount:
+        type: boolean
+        default: true
       catch-errors:
         type: boolean
         default: false
@@ -133,6 +136,7 @@ jobs:
     with:
       args: ${{ inputs.args }}
       rbe: ${{ inputs.rbe }}
+      bind-mount: ${{ inputs.bind-mount }}
       # This always just caches the main build image, the mobile one is layered on top
       cache-build-image: ${{ fromJSON(inputs.request).request.build-image.default }}
       catch-errors: ${{ inputs.catch-errors }}
