contrib: implement Peak EWMA load balancing policy (#40653)
# Commit Message

Adds Peak EWMA (Exponentially Weighted Moving Average) load balancing
policy that uses Power of Two Choices algorithm with real-time RTT
measurements for latency-aware request routing.

Key components:
- Load balancer: `envoy.load_balancing_policies.peak_ewma`
- HTTP filter: `envoy.filters.http.peak_ewma for RTT measurement`
- Configuration: `decay_time`, `aggregation_interval`,
`max_samples_per_host`, `default_rtt`, `penalty_value`

Implementation uses lock-free atomic ring buffers for RTT sample
collection and host-attached storage pattern. Draws from Finagle's Peak
EWMA algorithm while avoiding locks, and patterns after Envoy's existing
client-side WRR load balancing implementation for main/worker thread
coordination.

Fixes #20907

# Additional Description

This PR implements a new contrib load balancing policy based on the Peak
EWMA (Exponentially Weighted Moving Average) algorithm, which provides
latency-aware request routing using real-time RTT measurements.

This addresses the feature request in #20907 for a Peak EWMA load
balancer implementation.

## Performance Validation

Benchmark results demonstrate Peak EWMA's effectiveness at avoiding slow
servers.

Test setup: 10 clients, 10 upstream servers (1 server 10x slower than
others):

| Algorithm | Average | P50 | P75 | P90 | P95 | P99 | Min | Max | Std
Dev |

|---------------|---------|------|-------|--------|--------|--------|------|--------|---------|
| round_robin | 19.08 | 8.46 | 10.01 | 101.79 | 103.39 | 105.58 | 5.79 |
108.02 | 29.8 |
| least_request | 11.00 | 8.92 | 10.71 | 13.10 | 15.38 | 103.00 | 5.98 |
109.35 | 11.72 |
| random | 18.66 | 8.47 | 10.64 | 65.51 | 103.28 | 106.18 | 5.95 |
112.42 | 28.67 |
| **peak_ewma** | **10.16** | **9.66** | **11.13** | **13.29** |
**14.52** | **18.56** | **6.31** | **26.16** | **2.45** |

Peak EWMA demonstrates a dramatically lower tail latency than existing
Envoy load balancing algos.


--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -442,3 +442,5 @@ extensions/upstreams/tcp @ggreenway @mattklein123
 /contrib/qat/ @giantcroc @soulxu
 /contrib/generic_proxy/ @wbpcode @UNOWNED
 /contrib/tap_sinks/ @coolg92003 @yiyibaoguo
+/contrib/peak_ewma/filters/http/ @rroblak @UNOWNED
+/contrib/peak_ewma/load_balancing_policies/ @rroblak @UNOWNED
