--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -98,6 +98,12 @@ new_features:
     Supported dropping stats
     :ref:`DropAction
     <envoy_v3_api_msg_extensions.stat_sinks.open_telemetry.v3.SinkConfig.DropAction>` during custom metric conversion.
+- area: tcp_proxy
+  change: |
+    Added :ref:`upstream_connection_establishment_mode
+    <envoy_v3_api_field_extensions.filters.network.tcp_proxy.v3.TcpProxy.upstream_connection_establishment_mode>`
+    to control when upstream connections are established. This enables use cases like extracting
+    TLS certificate information or SNI before establishing upstream connections.
 - area: http
   change: |
     Added ``vhost_header`` to the RouteConfiguration, allowing use of a different header for vhost matching.
