add some more tests
Signed-off-by: wbpcode <wbphub@gmail.com>

--- a/test/common/tracing/BUILD
+++ b/test/common/tracing/BUILD
@@ -53,6 +53,7 @@ envoy_cc_test(
         "//test/mocks/router:router_mocks",
         "//test/mocks/runtime:runtime_mocks",
         "//test/mocks/stats:stats_mocks",
+        "//source/common/formatter:formatter_extension_lib",
         "//test/mocks/thread_local:thread_local_mocks",
         "//test/mocks/tracing:tracing_mocks",
         "//test/test_common:environment_lib",
