--- a/.github/workflows/_request.yml
+++ b/.github/workflows/_request.yml
@@ -28,6 +28,7 @@ on:
         default: |
           WORKSPACE
           **/*.bzl
+          .github/workflows/_request_cache_bazel.yml
       config-file:
         type: string
         default: ./.github/config.yml
