github/ci: Optimize diskspace hacks for private repos
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/.github/workflows/_run.yml
+++ b/.github/workflows/_run.yml
@@ -64,7 +64,8 @@ on:
         default: false
       diskspace-hack-paths:
         type: string
-        default:
+        default: |
+          /opt/hostedtoolcache
       docker-cpus:
         type: number
         default: 0
