--- a/docs/root/configuration/http/http_filters/_include/transform_filter.yaml
+++ b/docs/root/configuration/http/http_filters/_include/transform_filter.yaml
@@ -32,7 +32,7 @@ static_resources:
                       - append:
                           header:
                             key: "model-header"
-                            value: "%RQ_BODY(model)%"
+                            value: "%REQUEST_BODY(model)%"
                           append_action: OVERWRITE_IF_EXISTS_OR_ADD
               - match:
                   prefix: "/"
@@ -48,7 +48,7 @@ static_resources:
                 - append:
                     header:
                       key: "model-header"
-                      value: "%RQ_BODY(model)%"
+                      value: "%REQUEST_BODY(model)%"
                     append_action: OVERWRITE_IF_EXISTS_OR_ADD
                 body_transformation:
                   body_format:
@@ -60,12 +60,12 @@ static_resources:
                 - append:
                     header:
                       key: "prompt-tokens"
-                      value: "%RS_BODY(usage:prompt_tokens)%"
+                      value: "%RESPONSE_BODY(usage:prompt_tokens)%"
                     append_action: OVERWRITE_IF_EXISTS_OR_ADD
                 - append:
                     header:
                       key: "completion-tokens"
-                      value: "%RS_BODY(usage:completion_tokens)%"
+                      value: "%RESPONSE_BODY(usage:completion_tokens)%"
                     append_action: OVERWRITE_IF_EXISTS_OR_ADD
           - name: envoy.filters.http.router
             typed_config:
