--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -105,6 +105,12 @@ new_features:
   change: |
     Added support for not-equal operator for access log filter rules, in
     :ref:`ComparisonFilter <envoy_v3_api_msg_config.accesslog.v3.ComparisonFilter>`.
+- area: cel
+  change: |
+    Added per-expression configuration options for CEL evaluator to control string conversion, concatenation,
+    and string extension functions. CEL expressions in RBAC policies and access logger filters
+    can now enable string functions such as ``replace()`` and ``split()`` through the new ``cel_config`` field
+    in their respective configurations.
 - area: formatter
   change: |
     Added support for the following new access log formatters:
