xds: add config for random_subsetting LB policy extension

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -90,6 +90,10 @@ removed_config_or_runtime:
     Removed runtime guard ``envoy.reloadable_features.report_load_with_rq_issued`` and legacy code paths.
 
 new_features:
+- area: load_balancing
+  change: |
+    Added Random Subsetting Load Balancing policy. See
+    :ref:`load balancing policies overview <arch_overview_load_balancing_policies>` for more details.
 - area: udp_sink
   change: |
     Enhance UDP sink to handle the tapped message which the size is bigger than 64K.
