--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -350,6 +350,7 @@ extensions/upstreams/tcp @ggreenway @mattklein123
 /*/extensions/load_balancing_policies/common @wbpcode @tonya11en @nezdolik
 /*/extensions/load_balancing_policies/least_request @wbpcode @tonya11en @nezdolik
 /*/extensions/load_balancing_policies/random @wbpcode @tonya11en
+/*/extensions/load_balancing_policies/random_subsetting @wbpcode @nezdolik @tonya11en
 /*/extensions/load_balancing_policies/round_robin @wbpcode @tonya11en @nezdolik
 /*/extensions/load_balancing_policies/ring_hash @wbpcode @nezdolik
 /*/extensions/load_balancing_policies/maglev @wbpcode @nezdolik
