Add directory skeleton and basic logic for field checker
Signed-off-by: Sumit Kumar <sumitkmr@google.com>

--- a/source/extensions/filters/http/proto_api_scrubber/scrubbing_util_lib/BUILD
+++ b/source/extensions/filters/http/proto_api_scrubber/scrubbing_util_lib/BUILD
@@ -9,7 +9,7 @@ licenses(["notice"])  # Apache 2
 envoy_extension_package()
 
 envoy_cc_library(
-    name = "scrubbing_util",
+    name = "scrubbing_util_lib",
     srcs = [
         "field_checker.cc",
     ],
