--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -158,5 +158,8 @@ new_features:
     Added QUIC protocol option :ref:`max_sessions_per_event_loop
     <envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.max_sessions_per_event_loop>` to limit the maximum
     number of new QUIC sessions created per event loop. The default is 16, preserving the previous hardcoded limit.
+- area: lua
+  change: |
+    Added new executions counter to the Lua filter to track script execution count.
 
 deprecated:
