--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -145,5 +145,11 @@ new_features:
     Add a new quic configuration field, 'max_sessions_per_event_loop', to QuicProtocolOptions in Envoy listener.
     This allows tuning the maximum number of new QUIC sessions created within a single event loop.
     The default value is 16, preserving the previous hardcoded limit.
+- area: ext_authz
+  change: |
+    Add a new configuration field to the http ext authz filter
+    :ref:`enforce_response_header_limits <envoy_v3_api_field_extensions.filters.http.ext_authz.v3.ExtAuthz.enforce_response_header_limits>`
+    that allows admins to enable / disable the behavior of dropping response headers once the header
+    map count / size constraints have been reached.
 
 deprecated:
