--- a/.bazelrc
+++ b/.bazelrc
@@ -71,6 +71,7 @@ common --experimental_allow_tags_propagation
 
 # Python
 common --@rules_python//python/config_settings:bootstrap_impl=script
+common --incompatible_default_to_explicit_init_py
 
 build:linux --copt=-fdebug-types-section
 # Enable position independent code (this is the default on macOS and Windows)
