--- a/test/common/upstream/BUILD
+++ b/test/common/upstream/BUILD
@@ -522,7 +522,7 @@ envoy_cc_test(
         "//envoy/network:address_interface",
         "//source/common/network:utility_lib",
         "//source/common/stream_info:filter_state_lib",
-        "//source/common/upstream:transport_socket_input_lib",
+        "//source/extensions/matching/common_inputs/transport_socket:config_lib",
         "//test/mocks/network:network_mocks",
         "//test/mocks/stream_info:stream_info_mocks",
         "//test/test_common:utility_lib",
@@ -541,8 +541,8 @@ envoy_cc_test(
         "//source/common/config:metadata_lib",
         "//source/common/matcher:matcher_lib",
         "//source/common/network:transport_socket_options_lib",
-        "//source/common/upstream:transport_socket_input_lib",
         "//source/common/upstream:transport_socket_match_lib",
+        "//source/extensions/matching/common_inputs/transport_socket:config_lib",
         "//source/extensions/matching/network/common:inputs_lib",
         "//source/extensions/transport_sockets/raw_buffer:config",
         "//source/extensions/transport_sockets/tls:config",
