--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -411,6 +411,7 @@ extensions/upstreams/tcp @ggreenway @mattklein123
 /*/source/extensions/api_listeners/default_api_listener @UNOWNED @UNOWNED
 /*/source/extensions/listener_managers/listener_manager @yanavlasov @ggreenway
 /*/source/extensions/listener_managers/validation_listener_manager @adisuissa @ggreenway
+/*/source/extensions/matching/common_inputs/transport_socket @agrawroh @kyessenov
 /*/source/extensions/config_subscription/ @adisuissa @UNOWNED
 /*/source/extensions/config_subscription/grpc @adisuissa @UNOWNED
 
