--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -105,7 +105,8 @@ new_features:
     custom metric conversion.
 - area: lrs
   change: |
-    Added :ref:`load_stats_over_ads_config_connection <envoy_v3_api_field_config.bootstrap.v3.ClusterManager.load_stats_over_ads_config_connection>`
+    Added :ref:`load_stats_over_ads_config_connection
+    <envoy_v3_api_field_config.bootstrap.v3.ClusterManager.load_stats_over_ads_config_connection>`
     that makes the load reporting server use the primary server connection specified by the
     :ref:`ads_config <envoy_v3_api_field_config.bootstrap.v3.Bootstrap.DynamicResources.ads_config>`.
 - area: http
