api/dns: add c-ares reinit-on-timeout
Signed-off-by: najji <najjim7@gmail.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -74,8 +74,8 @@ bug_fixes:
     or ``HttpResponseTrailerMatchInput``, causing the delegated filter to be skipped without error.
 - area: dns
   change: |
-    Fixed c-ares DNS resolver to reinitialize when queries timeout. Previously,
-    timeout errors could leave the resolver unable to perform new lookups.
+    c-ares resolver: add optional ``reinit_channel_on_timeout`` to reinitialize
+    the resolver after DNS timeouts.
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
