--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -105,8 +105,8 @@ new_features:
     custom metric conversion.
 - area: tcp_proxy
   change: |
-    Added :ref:`upstream_connect_mode
-    <envoy_v3_api_field_extensions.filters.network.tcp_proxy.v3.TcpProxy.upstream_connect_mode>`
+    Added :ref:`upstream_connect_trigger
+    <envoy_v3_api_field_extensions.filters.network.tcp_proxy.v3.TcpProxy.upstream_connect_trigger>`
     to control when upstream connections are established. This enables use cases like extracting
     TLS certificate information or SNI before establishing upstream connections.
 - area: http
