report load when rq_active is non-zero
Signed-off-by: Xin Zhuang <stevenzzz@google.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -158,5 +158,8 @@ new_features:
     Added QUIC protocol option :ref:`max_sessions_per_event_loop
     <envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.max_sessions_per_event_loop>` to limit the maximum
     number of new QUIC sessions created per event loop. The default is 16, preserving the previous hardcoded limit.
-
+- area: xds
+  change: |
+    Added runtime guard ``envoy.reloadable_features.report_load_when_rq_active_is_non_zero``.
+    When enabled, LRS continues to send locality_stats reoprt to config server when there is no request_issued in the poll cycle.
 deprecated:
