socket: include network namespace in proto translation
Summary:
Admin `/listeners` endpoint does not return the network namespace path of
the listener sockets. This pull request updates the utilities used by
listener handler to include network namespace path in the proto address
returned in the response. This is used in production used for setting up
sockets per network namespace and monitoring.

Signed-off-by: Ronak Jain <ronakjainc@gmail.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -82,6 +82,11 @@ bug_fixes:
   change: |
     c-ares resolver: add optional ``reinit_channel_on_timeout`` to reinitialize
     the resolver after DNS timeouts.
+- area: admin
+  change: |
+    Fixed admin ``/listeners`` endpoint to include network namespace filepath in socket addresses.
+    Previously, listeners in non-default network namespaces would return addresses without the namespace
+    information.
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
