--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -35,8 +35,8 @@ minor_behavior_changes:
     messages remain available in debug logs.
 - area: ext_authz
   change: |
-    Check the request header count & size in kb after applying mutations is <= the configured limits
-    and reject the response if not.
+    Check that the response header count is less than the configured limits before applying mutations, and do not
+    add new headers if not.
 - area: mobile
   change: |
     Use mobile specific network observer registries to propagate network change signals. This behavior can be reverted by
@@ -158,5 +158,9 @@ new_features:
     Added QUIC protocol option :ref:`max_sessions_per_event_loop
     <envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.max_sessions_per_event_loop>` to limit the maximum
     number of new QUIC sessions created per event loop. The default is 16, preserving the previous hardcoded limit.
+- area: ext_proc
+  change: |
+    Added new method processingEffects within Filter State. This mehtod returns the per HTTP event procesing_effects that occurred
+    during the filter processing. Introduced a new enum to track if a mutation was applied or why it was rejected. 
 
 deprecated:
