--- a/source/extensions/filters/http/proto_api_scrubber/scrubbing_util_lib/BUILD
+++ b/source/extensions/filters/http/proto_api_scrubber/scrubbing_util_lib/BUILD
@@ -17,7 +17,9 @@ envoy_cc_library(
         "field_checker.h",
     ],
     deps = [
+        "//source/common/http/matching:data_impl_lib",
         "//source/common/protobuf",
+        "//source/extensions/filters/http/proto_api_scrubber:filter_config",
         "@com_google_protoprocessinglib//proto_processing_lib/proto_scrubber",
     ],
 )
