dns: reinitialize c-ares channel on ARES_ETIMEOUT (#41718)
Commit Message: dns: reinitialize c-ares channel on ARES_ETIMEOUT

Additional Description::
Add ARES_ETIMEOUT to the list of error conditions that trigger c-ares
channel reinitialization. When DNS queries timeout, the c-ares channel
can enter a broken state where UDP sockets become unusable and
subsequent queries continue to fail. This is similar to
ARES_ECONNREFUSED and other connection errors that already trigger
reinitialization.

Risk Level: Low

Testing: Updated existing `DnsImplZeroTimeoutTest::Timeout` test to
verify channel reinitialization after timeout.

Docs Changes: N/A

Release Notes: Added to changelogs/current.yaml

Platform Specific Features: N/A

---------

Signed-off-by: najji <najjim7@gmail.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -78,6 +78,10 @@ bug_fixes:
     Fixed per-route configuration for composite filter to support matching on response headers and trailers.
     Previously, per-route matchers would silently fail when attempting to match on ``HttpResponseHeaderMatchInput``
     or ``HttpResponseTrailerMatchInput``, causing the delegated filter to be skipped without error.
+- area: dns
+  change: |
+    c-ares resolver: add optional ``reinit_channel_on_timeout`` to reinitialize
+    the resolver after DNS timeouts.
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
