addressed comments from @kyessenov
Signed-off-by: Rohit Agrawal <rohit.agrawal@databricks.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -153,8 +153,10 @@ new_features:
     <envoy_v3_api_field_config.cluster.v3.Cluster.transport_socket_matcher>` to clusters. This matcher
     uses the generic xDS matcher framework to select a named transport socket from
     :ref:`transport_socket_matches
-    <envoy_v3_api_field_config.cluster.v3.Cluster.transport_socket_matches>` based on connection
-    attributes such as destination/source IP and port, SNI, ALPN, and dynamic metadata.
+    <envoy_v3_api_field_config.cluster.v3.Cluster.transport_socket_matches>` based on endpoint metadata,
+    locality metadata, and filter state. Filter state enables downstream-connection-based matching by
+    allowing filters to explicitly share data (e.g., network namespace) from downstream to upstream connections
+    via TransportSocketOptions, following the same pattern as tunneling in Envoy.
 - area: admin
   change: |
     Added ``/memory/tcmalloc`` admin endpoint that provides TCMalloc memory statistics.
