--- a/source/extensions/extensions_metadata.yaml
+++ b/source/extensions/extensions_metadata.yaml
@@ -1741,6 +1741,13 @@ envoy.matching.inputs.locality_metadata:
   status: stable
   type_urls:
   - envoy.extensions.matching.common_inputs.transport_socket.v3.LocalityMetadataInput
+envoy.matching.inputs.filter_state:
+  categories:
+  - envoy.matching.inputs
+  security_posture: unknown
+  status: stable
+  type_urls:
+  - envoy.extensions.matching.common_inputs.transport_socket.v3.FilterStateInput
 envoy.matching.inputs.application_protocol:
   categories:
   - envoy.matching.inputs
