--- a/test/common/upstream/BUILD
+++ b/test/common/upstream/BUILD
@@ -519,12 +519,10 @@ envoy_cc_test(
     name = "transport_socket_input_test",
     srcs = ["transport_socket_input_test.cc"],
     deps = [
-        "//envoy/network:address_interface",
-        "//source/common/network:utility_lib",
+        "//source/common/config:metadata_lib",
         "//source/common/stream_info:filter_state_lib",
         "//source/extensions/matching/common_inputs/transport_socket:config_lib",
-        "//test/mocks/network:network_mocks",
-        "//test/mocks/stream_info:stream_info_mocks",
+        "//test/mocks/protobuf:protobuf_mocks",
         "//test/test_common:utility_lib",
         "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/matching/common_inputs/transport_socket/v3:pkg_cc_proto",
@@ -541,6 +539,8 @@ envoy_cc_test(
         "//source/common/config:metadata_lib",
         "//source/common/matcher:matcher_lib",
         "//source/common/network:transport_socket_options_lib",
+        "//source/common/router:string_accessor_lib",
+        "//source/common/stream_info:filter_state_lib",
         "//source/common/upstream:transport_socket_match_lib",
         "//source/extensions/matching/common_inputs/transport_socket:config_lib",
         "//source/extensions/matching/network/common:inputs_lib",
