network: populate NNS in the filter state when connection is accepted
Signed-off-by: Rohit Agrawal <rohit.agrawal@databricks.com>

--- a/source/common/network/BUILD
+++ b/source/common/network/BUILD
@@ -536,6 +536,7 @@ envoy_cc_library(
         ":application_protocol_lib",
         ":filter_state_proxy_info_lib",
         ":proxy_protocol_filter_state_lib",
+        ":upstream_network_namespace_lib",
         ":upstream_server_name_lib",
         ":upstream_subject_alt_names_lib",
         "//envoy/common:hashable_interface",
@@ -577,6 +578,17 @@ envoy_cc_library(
     name = "upstream_server_name_lib",
     srcs = ["upstream_server_name.cc"],
     hdrs = ["upstream_server_name.h"],
+    deps = [
+        "//envoy/registry",
+        "//envoy/stream_info:filter_state_interface",
+        "//source/common/common:macros",
+    ],
+)
+
+envoy_cc_library(
+    name = "upstream_network_namespace_lib",
+    srcs = ["upstream_network_namespace.cc"],
+    hdrs = ["upstream_network_namespace.h"],
     deps = [
         "//envoy/registry",
         "//envoy/stream_info:filter_state_interface",
