Update match tree incomplete handling
Signed-off-by: Sumit Kumar <sumitkmr@google.com>

--- a/source/extensions/filters/http/proto_api_scrubber/scrubbing_util_lib/BUILD
+++ b/source/extensions/filters/http/proto_api_scrubber/scrubbing_util_lib/BUILD
@@ -17,6 +17,7 @@ envoy_cc_library(
         "field_checker.h",
     ],
     deps = [
+        "//source/common/common:minimal_logger_lib",
         "//source/common/http/matching:data_impl_lib",
         "//source/common/protobuf",
         "//source/extensions/filters/http/proto_api_scrubber:filter_config",
